# OTUS_HomeWork_2

./: CMakeLists.txt
.github/workflows/: homework_2.yml  ipFilter.yml  ip_filter.yml
include/: ip_filter.h
src/: ip_filter.cpp  main.cpp
